--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~53.0.17",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.525.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
