--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.11.1",
+    "emailjs-com": "^3.2.0",
     "expo": "~53.0.17",
+    "expo-image-picker": "^16.1.4",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.525.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tailwindcss": "^3.4.17",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
