--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "emailjs-com": "^3.2.0",
     "expo": "~53.0.17",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "7.2.2",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
